Make Site Engagement behave for adding 0 points.

This CL changes the site engagement service to allow adding 0 points as
a no-op. This will allow us to turn off engagement sources via Finch by
setting them to 0.

BUG=642265

Review-Url: https://codereview.chromium.org/2293793002
Cr-Commit-Position: refs/heads/master@{#416488}

Former-commit-id: f73cdba299e7e52a15d6bffbf874a94732dc47cb